# ======================================================================
# physipy packaging — single source of truth.
#
# Build backend : hatchling (PEP 517).  All project metadata lives in the
# [project] table below (PEP 621).  The package version is read dynamically
# from physipy/_version.py, so it is never duplicated here.
# ======================================================================

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

# ----------------------------------------------------------------------
# Core metadata
# ----------------------------------------------------------------------
[project]
name = "physipy"
description = "Manipulate physical quantities (value + physical unit) in Python."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "mocquin", email = "mocquin@me.com" }]
keywords = [
    "physics",
    "physical",
    "unit",
    "units",
    "dimension",
    "quantity",
    "quantities",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Typing :: Typed",
]

# Version is supplied at build time from physipy/_version.py (see
# [tool.hatch.version] below).
dynamic = ["version"]

# Only numpy is required to `import physipy`.  Everything heavier is an
# optional extra (see [project.optional-dependencies]); the relevant module
# raises a clear, actionable ImportError if the feature is used without it
# (see physipy/_optional.py).
dependencies = [
    "numpy>=2.2.5",
]

[project.urls]
Homepage = "https://github.com/mocquin/physipy"
Documentation = "https://physipy.readthedocs.io/en/latest/"
Repository = "https://github.com/mocquin/physipy"
Issues = "https://github.com/mocquin/physipy/issues"
Benchmarks = "https://mocquin.github.io/physipy/"

# ----------------------------------------------------------------------
# Optional features.  Install with e.g. `pip install physipy[all]`.
# ----------------------------------------------------------------------
[project.optional-dependencies]
# scipy powers physipy.calculus (integration / ODE / root finding).
calculus = ["scipy>=1.15.3"]
# scipy also provides the physical-constant values in physipy.constants.
constants = ["scipy>=1.15.3"]
# matplotlib powers the unit-aware plotting integration (setup_matplotlib).
plotting = ["matplotlib>=3.10.3"]
# sympy powers compound dimension-string parsing (Dimension("L**2/T")) and
# the LaTeX rendering (_repr_latex_, latex_SI_unit).
symbolic = ["sympy>=1.14.0"]
# Everything optional at once.
all = [
    "scipy>=1.15.3",
    "matplotlib>=3.10.3",
    "sympy>=1.14.0",
]

# ----------------------------------------------------------------------
# Build configuration (hatchling)
# ----------------------------------------------------------------------
[tool.hatch.version]
# Read __version__ = "..." from this file.
path = "physipy/_version.py"

[tool.hatch.build.targets.wheel]
# Ship the package directory as-is. Non-Python files inside it
# (py.typed marker for PEP 561, quantity/dimension.txt data file) are
# included automatically by hatchling.
packages = ["physipy"]

[tool.hatch.build.targets.sdist]
# Files included in the source distribution. Patterns are anchored to the
# project root (leading "/") so they match only the intended top-level files.
include = [
    "/physipy",
    "/README.md",
    "/LICENSE",
]

# ----------------------------------------------------------------------
# Development dependency groups (PEP 735).  Install with `uv sync` or
# `pip install --group dev`.
# ----------------------------------------------------------------------
[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "pre-commit>=3.7",
    # the scientific stack, so the full test suite can run locally
    "scipy>=1.15.3",
    "matplotlib>=3.10.3",
    "sympy>=1.14.0",
    "pandas>=2.3.0",
]
# Third-party quantity libraries used by benchmarks/compare_packages.py.
benchmark = [
    "pint>=0.24",
    "astropy>=6.0",
    "forallpeople>=2.6",
    "matplotlib>=3.10.3",
    "pandas>=2.3.0",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
    "mkdocs-jupyter>=0.25",
    "markdown-include>=0.8",
    "pymdown-extensions>=10.0",
]

# ----------------------------------------------------------------------
# Tooling
# ----------------------------------------------------------------------
[tool.ruff]
line-length = 79
target-version = "py310"
extend-exclude = ["asv_benchmarks", "hooks", "docs", ".venv"]

[tool.ruff.lint]
# E/W pycodestyle, F pyflakes, I import-sorting, UP pyupgrade, B bugbear,
# T10 flake8-debugger (flags leftover pdb.set_trace()/breakpoint()).
select = ["E", "W", "F", "I", "UP", "B", "T10"]
ignore = [
    "E741", # ambiguous names (l, I, ...) are common in physics formulas
]

[tool.ruff.format]
docstring-code-format = true

[tool.mypy]
python_version = "3.10"
files = ["physipy"]
# physipy ships inline types (py.typed) but its optional deps may not;
# keep type-checking lenient on third-party imports.
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true

[tool.pytest.ini_options]
testpaths = ["test"]
addopts = "-ra"

[tool.coverage.run]
source = ["physipy"]
branch = true

[tool.coverage.report]
show_missing = true

# ----------------------------------------------------------------------
# Publishing: declare TestPyPI as an explicit (opt-in) uv index so a
# release can be smoke-tested with `uv publish --index testpypi`.
# ----------------------------------------------------------------------
[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
